Fixed the out of container images on market.

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -139,6 +139,8 @@
 }
 .images {
   width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 .recent {
   margin-top: 15px;
