--- a/public/css/urban_product.css
+++ b/public/css/urban_product.css
@@ -19,6 +19,8 @@
 }
 .images {
   width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 .c-grey {
   color: rgb(140, 140, 140);
